# Hector_Simulation

./: .clang-format  License.md  Readme.md
Hector_ROS_Simulation/hector_control/: CMakeLists.txt
Hector_ROS_Simulation/hector_control/ConvexMPC/: Constraints.cpp  Constraints.h  ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  GaitGenerator.cpp  GaitGenerator.h  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_interface.h
Hector_ROS_Simulation/hector_control/include/: simulation.h
Hector_ROS_Simulation/hector_control/include/FSM/: FSM.h  FSMState.h  FSMState_Passive.h  FSMState_Walking.h
Hector_ROS_Simulation/hector_control/include/common/: Biped.h  CheaterEstimator.h  ControlFSMData.h  DesiredCommand.h  LegController.h  OrientationEstimator.h  PositionVelocityEstimator.h  StateEstimatorContainer.h  enumClass.h
Hector_ROS_Simulation/hector_control/include/common/Math/: Interpolation.h  MathUtilities.h  orientation_tools.h
Hector_ROS_Simulation/hector_control/include/common/Utilities/: BSplineBasic.h  PeriodicTask.h  SharedMemory.h  Timer.h  pseudoInverse.h
Hector_ROS_Simulation/hector_control/include/interface/: CheatIO.h  CmdPanel.h  IOInterface.h  KeyBoard.h  MujocoIO.h
Hector_ROS_Simulation/hector_control/include/messages/: LowLevelCmd.h  LowlevelState.h
Hector_ROS_Simulation/hector_control/include/sdk/include/unitree_legged_sdk/: comm.h
Hector_ROS_Simulation/hector_control/src/: main.cpp  mjSim.cpp  simulation.cpp
Hector_ROS_Simulation/hector_control/src/FSM/: FSM.cpp  FSMState.cpp  FSMState_Passive.cpp  FSMState_Walking.cpp
Hector_ROS_Simulation/hector_control/src/common/: DesiredCommand.cpp  FootSwingTrajectory.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
Hector_ROS_Simulation/hector_control/src/interface/: CheatIO.cpp  KeyBoard.cpp  MujocoIO.cpp
Hector_ROS_Simulation/hector_description/launch/: display.launch.py  hector_rviz.launch
Hector_ROS_Simulation/hector_description/mjcf/: hector.xml
Hector_ROS_Simulation/hector_description/xacro/: const.xacro  hector.urdf  leg.xacro  robot.xacro
Hector_ROS_Simulation/mujoco_sim/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/mujoco_sim/script/: hector_sim.py  joint_test.py  mujoco_base.py  pai_sim.py
Hector_ROS_Simulation/mujoco_sim_py/: setup.cfg  setup.py
Hector_ROS_Simulation/mujoco_sim_py/mujoco_sim_py/: hector_sim.py  mujoco_base.py
Hector_ROS_Simulation/pai_control/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/pai_control/ConvexMPC/: ConvexMPCLocomotion.cpp  RobotState.cpp  SolverMPC.cpp
Hector_ROS_Simulation/pai_control/include/common/: Biped.h  LegController.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
Hector_ROS_Simulation/pai_control/src/: main.cpp  mjSim.cpp  pinocchio_test.cpp
Hector_ROS_Simulation/pai_control/src/FSM/: FSMState_Passive.cpp  FSMState_Walking.cpp
Hector_ROS_Simulation/pai_control/src/common/: LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
Hector_ROS_Simulation/pai_control/src/interface/: CheatIO.cpp
Hector_ROS_Simulation/pai_description/: CMakeLists.txt  package.xml
Hector_ROS_Simulation/pai_description/config/: robot_control.yaml
Hector_ROS_Simulation/pai_description/launch/: check_joint.rviz  hector_rviz.launch
Hector_ROS_Simulation/pai_description/mjcf/: pai.xml
Hector_ROS_Simulation/pai_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  pai.urdf  pai.xacro  robot.xacro
Hector_ROS_Simulation/unitree_ros/: README.md
Hector_ROS_Simulation/unitree_ros/unitree_gazebo/launch/: biped.launch
Hector_ROS_Simulation/unitree_ros/unitree_gazebo/worlds/: normal.world
hector_controller/: CMakeLists.txt  package.xml
hector_description/: CMakeLists.txt  package.xml
hector_description/launch/: display.launch.py  gazebo.launch.py
mujoco_sim_py/: package.xml  setup.py
mujoco_sim_py/mujoco_sim_py/: hector_sim.py  mujoco_base.py
pai_description/: CMakeLists.txt  package.xml
pai_description/launch/: display.launch.py  gazebo.launch.py
